fix spacing around GO button

--- a/src/App.scss
+++ b/src/App.scss
@@ -127,13 +127,14 @@ html, body, #root, .app {
     justify-content: space-between;
     background-color:#232444;
     border-right: 1px solid white;
-    padding-right: 8%;
+    padding-right: 9%;
   }
 
   #zipInput{
     height: 30%;
     width: 80%;
     font-size: 24px;
+    margin-right: 13%;
     color: white;
     display: block;
     background: none;
